Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-126702

ASAN crash at startup with 'gallery' example

    XMLWordPrintable

Details

    • Windows
    • aa3e6ab27 (dev), 1af3e2bd9 (6.8)

    Description

      'Gallery' example and, maybe others, crash during startup with address sanitizer enabled with msvc 2022

      See attached file for ASAN log.

      To reproduce, compile QtBase submodule with address sanitizer enabled, and start gallery example.

       

      Attachments

        1. QTBUG-126702.txt
          18 kB
          Jøger Hansegård
        For Gerrit Dashboard: QTBUG-126702
        # Subject Branch Project Status CR V

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            johanseg Jøger Hansegård
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes