src/gui/kernel/qguivariant.cpp
@@ -57,7 +57,7 @@ QT_BEGIN_NAMESPACE
 namespace {
 
 // NOLINTNEXTLINE(cppcoreguidelines-virtual-class-destructor): this is not a base class
-static constexpr struct : QMetaTypeModuleHelper
+struct QVariantGuiHelper : QMetaTypeModuleHelper
 {
 #define QT_IMPL_METATYPEINTERFACE_GUI_TYPES(MetaTypeName, MetaTypeId, RealName) \
     QT_METATYPE_INTERFACE_INIT(RealName),
@@ -135,7 +135,9 @@ static constexpr struct : QMetaTypeModuleHelper
         }
         return false;
     }
-} qVariantGuiHelper;
+};
+
+static constexpr QVariantGuiHelper qVariantGuiHelper;
 
 } // namespace used to hide QVariant handler
 
